# Time_Series

./: CMakeLists.txt  GaussianGenerator.cpp  GaussianGenerator.h  KNN.cpp  KNN.h  SinWaveGenerator.cpp  SinWaveGenerator.h  StepGenerator.cpp  StepGenerator.h  TimeSeriesDataset.cpp  TimeSeriesDataset.h  TimeSeriesGenerator.cpp  TimeSeriesGenerator.h  main.cpp
